# loom-groovebox

./: LICENSE.md  PRIVACY_POLICY.md  README.md  UserManual.md  brace_check.py  brace_check_debug.py  braces_only.txt  build_final_fix.txt  build_final_icon_verify.txt  build_final_success.txt  build_final_verify.txt  build_final_verify_v2.txt  build_final_verify_v3.txt  build_final_verify_v4.txt  build_final_verify_v5.txt  build_granular_refine.txt  build_granular_ui_v1.txt  build_log.txt  build_log_2.txt  build_log_attempt_19.txt  build_log_block_fix_2.txt  build_log_block_opt.txt  build_log_block_opt_final.txt  build_log_block_opt_final_2.txt  build_log_cpu_fix.txt  build_log_cpu_fix_2.txt  build_log_cpu_fix_3.txt  build_log_cpu_opt.txt  build_log_crash_final.txt  build_log_crash_fix.txt  build_log_denormal_fix_2.txt  build_log_drum_fix.txt  build_log_final.txt  build_log_final_fix.txt  build_log_gate_fix.txt  build_log_highlight_fix.txt  build_log_knobs.txt  build_log_knobs_v2.txt  build_log_knobs_v3.txt  build_log_knobs_v4.txt  (+49 more)
app/src/main/cpp/: Arpeggiator.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ChordProgressionEngine.h  EnvelopeFollower.h  RoutingMatrix.h  Sequencer.h  Utils.h  WavFileUtils.h  native-lib.cpp
app/src/main/cpp/engines/: Adsr.h  AnalogDrumEngine.h  AudioInEngine.h  AutoPannerFx.h  BitcrusherFx.h  ChorusFx.h  CompressorFx.h  DelayFx.h  FilterLfoFx.h  FlangerFx.h  FmDrumEngine.h  FmEngine.h  FmOperator.h  GalacticReverb.h  GranularEngine.h  HallReverbFx.h  LfoEngine.h  OctaverFx.h  Oscillator.h  OverdriveFx.h  PhaserFx.h  SamplerEngine.h  (+8 more)
(+24 files in other folders)
